syntax = "proto3";
option java_multiple_files=true;
option java_generic_services=true;
package com.services.grpc.server.club;

message ProtoClub{
  string id=1;
  int32 moneyAmount = 2;
  int32 seedCapital = 3;
}

message Empty{

}

message ClubResponse{
  ProtoClub club = 1;
}

message CreateClubRequest{
  int32 seedCapital = 1;
}

message MoneyRequest{
  int32 moneyAmount = 1;
}

message StringResponse{
  string text =1;
}

service ClubService{
  rpc getClub(Empty) returns (ClubResponse);
  rpc addClub(CreateClubRequest) returns (ClubResponse);
  rpc spendMoney(MoneyRequest) returns (StringResponse);
  rpc earnMoney(MoneyRequest) returns (StringResponse);
}